Fix cocktail cards wrap and add anchor tags on image top

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -293,7 +293,6 @@ h3 {
 
 footer {
     background-color: var(--first-color);
-    position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
@@ -384,7 +383,7 @@ footer a:hover{
 
 /* cocktail cards */
 
-.cocktail-card {
+.wrap {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
